--- a/src/app/layouts/main-layout/components/left-sidebar/left-sidebar.component.html
+++ b/src/app/layouts/main-layout/components/left-sidebar/left-sidebar.component.html
@@ -37,23 +37,23 @@
       <li class="ms-1">
         <a
           class="d-flex gap-4"
-          routerLink="/connection"
+          routerLink="/girls-in-action"
           routerLinkActive="active"
           (click)="closeSidebar()"
         >
           <fa-icon [icon]="['fas', 'heart-circle-plus']" class="font-24-px" />
-          <span>Connection</span>
+          <span>Girls in Action</span>
         </a>
       </li>
       <li class="ms-1">
         <a
           class="d-flex gap-4"
-          routerLink="/promote-you"
+          routerLink="/lets-fuck"
           routerLinkActive="active"
           (click)="closeSidebar()"
         >
           <fa-icon [icon]="['fas', 'wand-magic-sparkles']" class="font-24-px" />
-          <span>Promote You!</span>
+          <span>Let’s Fuck!</span>
         </a>
       </li>
       <li class="ms-1">
