Change meta image and wording

--- a/src/app/layouts/auth-layout/pages/landing-page/landing-page.component.html
+++ b/src/app/layouts/auth-layout/pages/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-light px-6 px-sm-10 auth-btns">
     <div class="d-flex flex-column">
       <img
-        src="/assets/images/landingpage/profile.png"
+        src="/assets/images/landingpage/Fuck-Theater-Logo.png"
         class="h-60-px pt-2"
         alt=""
       />
@@ -35,6 +35,7 @@
           <span class="d-flex flex-column align-items-center">
             <h1 class="text-black my-2 text-s">Fuck.theater</h1>
             <p class="text-black c-fonts my-3 mb-0">Live Girls!</p>
+            <p class="text-black c-fonts my-3 mb-0 mt-4">Talk One-on-One Face-to-Face</p>
           </span>
         </div>
         <div class="row m-0 justify-content-end offset-0"></div>
