--- a/src/app/layouts/auth-layout/pages/landing-page/landing-page.component.html
+++ b/src/app/layouts/auth-layout/pages/landing-page/landing-page.component.html
@@ -48,6 +48,7 @@
       </ng-container>
     </div>
   </div>
+  <div class="h-200-px"></div>
 </div>
 <ng-container *ngIf="mobileMenuToggle">
   <div class="main-area p-5 profile-content">
