--- a/src/app/layouts/auth-layout/pages/landing-page/landing-page.component.html
+++ b/src/app/layouts/auth-layout/pages/landing-page/landing-page.component.html
@@ -33,7 +33,7 @@
       <div class="container">
         <div class="main-banner p-2 p-sm-4" *ngIf="!isLogin && !isRegister">
           <span class="d-flex flex-column align-items-center">
-            <h1 class="text-black my-2 text-s">Fuck.theater</h1>
+            <h1 class="text-black text-header my-2 text-s">Fuck.theater</h1>
             <p class="text-black c-fonts my-3 mb-0">Live Girls!</p>
             <p class="text-black c-fonts my-3 mb-0 mt-4">Talk One-on-One Face-to-Face</p>
           </span>
