Apply recent changes all done as of 15-05

--- a/src/app/layouts/main-layout/components/notifications-modal/notifications-modal.component.html
+++ b/src/app/layouts/main-layout/components/notifications-modal/notifications-modal.component.html
@@ -5,7 +5,7 @@
       <a
         class="d-flex justify-content-between align-items-center"
         (click)="readUnreadNotification(notification.postId, notification.id)"
-        [routerLink]="'post/' + notification.postId"
+        [routerLink]="notification?.postId === null ? '/chats' : '/post/' + notification?.postId"
       >
         <div class="left-item position-relative d-inline-flex gap-3">
           <div class="avatar position-relative d-inline-flex">
