--- a/src/app/layouts/main-layout/pages/on-boarding/on-boarding.component.html
+++ b/src/app/layouts/main-layout/pages/on-boarding/on-boarding.component.html
@@ -5,8 +5,8 @@
         <li *ngFor="let step of visibleSteps(); let i = index"
             [class.active]="step <= currentStep" 
             class="step"
-            (click)="goToStep(step)"
             [attr.data-step]="step + 1">
+            <!-- (click)="goToStep(step)" -->
             <!-- {{ step }} -->
           </li>
         </ul>
@@ -565,6 +565,23 @@
                   option
                 }}</span>
               </div>
+            </div>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="i === 17">
+          <h5 class="text-center">Please tell your match your story!</h5>
+          <div class="d-flex flex-column text-start">
+            <textarea
+              class="input-textarea"
+              cols="30"
+              rows="8"
+              placeholder="start typing..."
+              formControlName="idealText"
+            ></textarea>
+            <span class="text-danger">{{ onBoardingForm.get('idealText').value?.length || 0 }} / 500</span>
+            <div *ngIf="onBoardingForm.get('idealText').invalid && (onBoardingForm.get('idealText').dirty || onBoardingForm.get('idealText').touched)">
+              <div *ngIf="onBoardingForm.get('idealText').errors?.minlength" class="text-danger">Minimum length is 20 characters.</div>
+              <div *ngIf="onBoardingForm.get('idealText').errors?.maxlength" class="text-danger">Maximum length is 500 characters.</div>
             </div>
           </div>
         </ng-container>
