--- a/src/app/layouts/main-layout/pages/settings/edit-profile/edit-profile.component.html
+++ b/src/app/layouts/main-layout/pages/settings/edit-profile/edit-profile.component.html
@@ -51,7 +51,7 @@
               type="text"
               name="uname"
               class="input-area"
-              placeholder="Enter your Username"
+              placeholder="Enter your userName"
               [(ngModel)]="customer.userName"
               (keyup)="onChangeTag($event)"
             />
