--- a/src/app/@shared/components/media-gallery/media-gallery.component.html
+++ b/src/app/@shared/components/media-gallery/media-gallery.component.html
@@ -44,7 +44,7 @@
             </div>
           </div>
           <span class="font-12-px"
-            >{{ message.sentBy === profileId ? "You" : message.Username }},{{
+            >{{ message.sentBy === profileId ? "You" : message.userName }},{{
               message.createdDate | date : "h:mm a"
             }}</span
           >
