--- a/src/app/@shared/components/tag-user-input/tag-user-input.component.html
+++ b/src/app/@shared/components/tag-user-input/tag-user-input.component.html
@@ -2,7 +2,7 @@
   <div #tagInputDiv contenteditable [attr.placeholder]="placeholder" class="tag-input-div tag-image-preview input-area c-text"
     (input)="messageOnKeyEvent()" [mentionConfig]="{
       items: userList,
-      labelKey: 'Username',
+      labelKey: 'userName',
       triggerChar: '@',
     }" [mentionListTemplate]="mentionListTemplate" (itemSelected)="selectTagUser($event)"></div>
   <ng-container *ngIf="isShowEmojis">
@@ -28,9 +28,9 @@
   
   <ng-template #mentionListTemplate let-item="item" class="user-dropdown-menu w-100 overflow-auto">
     <div class="d-flex gap-3 pe-auto overflow-hidden">
-      <img loading="lazy" class="w-32-px h-32-px pt-0 rounded" data-src="{{ item.profilePicName }}" [alt]="item?.Username"
+      <img loading="lazy" class="w-32-px h-32-px pt-0 rounded" data-src="{{ item.profilePicName }}" [alt]="item?.userName"
         onerror="this.onerror=null;this.src='/assets/images/avtar/profile.png';" />
-      <span>{{ (item.Username.split(" ")).join("") }}</span>
+      <span>{{ (item.userName.split(" ")).join("") }}</span>
     </div>
   </ng-template>
   <!-- <div #userSearchDropdownRef ngbDropdown>
@@ -46,10 +46,10 @@
             loading="lazy"
             class="w-32-px h-32-px rounded"
             data-src="{{ user.profilePicName }}"
-            [alt]="user.Username"
+            [alt]="user.userName"
             onerror="this.onerror=null;this.src='/assets/images/avtar/profile.png';"
           />
-          <span>{{ user.Username }}</span>
+          <span>{{ user.userName }}</span>
         </div>
       </ng-container>
     </div>
