--- a/src/app/layouts/main-layout/pages/communities/communities.component.html
+++ b/src/app/layouts/main-layout/pages/communities/communities.component.html
@@ -1,6 +1,6 @@
 <div class="mb-5 d-flex gap-3 justify-content-between">
   <div class="d-flex flex-column pt-3">
-    <h6 class="d-block d-xl-none text-start">Communities</h6>
+    <h6 class="d-block d-xl-none text-start">Girls in Action!</h6>
 
     <ul
       ngbNav
@@ -12,7 +12,7 @@
       <li ngbNavItem="local">
         <button ngbNavLink class="d-flex gap-1">
           All
-          <div class="d-none d-xl-block">Connections</div>
+          <div class="d-none d-xl-block">Action Girls</div>
         </button>
       </li>
     </ul>
@@ -52,7 +52,7 @@
     <app-inline-loader *ngIf="isCommunityLoader" />
 
     <ng-container *ngIf="!isCommunityLoader">
-      <span>No Practitioner found</span>
+      <span>No Girls found</span>
     </ng-container>
   </ng-container>
 </div>
