--- a/src/app/layouts/main-layout/pages/find-connections/find-connections.component.scss
+++ b/src/app/layouts/main-layout/pages/find-connections/find-connections.component.scss
@@ -106,6 +106,11 @@
 }
 
 ::ng-deep {
+  .intrests-box {
+    svg path {
+      fill: #ffd3c6 !important;
+    }
+  }
   .connection-slider {
     border-radius: 1rem;
   }
