--- a/src/app/layouts/main-layout/pages/settings/view-profile/view-profile.component.html
+++ b/src/app/layouts/main-layout/pages/settings/view-profile/view-profile.component.html
@@ -29,7 +29,7 @@
           />
           <div class="user-details ms-3">
             <h3 class="d-flex">
-              {{ customer?.Username }}
+              {{ customer?.userName }}
             </h3>
             <div class="col-md" *ngIf="+profileId === customer.Id">
               <button
@@ -193,7 +193,7 @@
                 <div class="single-item notification-area text-area text-start">
                   <h6 class="m-0 mb-1 d-flex align-items-center">
                     <a class="cursor" (click)="viewUserPost(item.id)">{{
-                      item?.Username
+                      item?.userName
                     }}</a>
                     <span class="smtxt time-schedule ms-1">
                       <fa-icon class="ms-2" [icon]="['fas', 'clock']" />
